--- a/config.json
+++ b/config.json
@@ -8,9 +8,9 @@
         "BindHost": "0.0.0.0"
     },
     "SASL": {
-        "UseSASL": false,
+        "UseSASL": true,
         "SASLNick": "EliteBot",
-        "SASLPassword": "Password"
+        "SASLPassword": "password"
     },
     "Logging": {
         "Console": true
